# brainless-raider

./: .gitignore  Cargo.toml  TODO.md  TODO.txt  acp  component_spec.toml  flake.nix  propertytypes.json  web_build.md  webbuild.cmd
res/: .gitignore  brainlessraider.tiled-project  brainlessraider.tiled-session  sprites.tsx
res/maps/tutorial/: 1.tmx  2.tmx  3.tmx  title.tmx  youwin.tmx
res/maps/world1/: 0.tmx  1.tmx
res/templates/: adventurer.tx  background_loop.tx  button.tx  camera.tx  enter_portal.tx  exit.tx  exit_portal.tx  goblinoid.tx  label.tx  pit.tx  planks.tx  planks_trigger.tx  teleporter.tx  treasure.tx
src/: audio_server.rs  brmap.rs  clickable_area.rs  collision.rs  collision_events.rs  components.rs  death.rs  helpers.rs  hydrate_components.rs  main.rs  map_loader.rs  movement.rs  pause.rs  pits_and_planks.rs  pixel_perfect_camera.rs  scene.rs  tags.rs  teleporter.rs  treasure_train.rs  ui.rs  you_win.rs
src/res/: brainlessraider.tiled-session
src/res/maps/tutorial/: 0.tmx  2.tmx  4.tmx
src/res/templates/: enter_portal.tx  exit.tx  pit.tx  treasure.tx
web/: index.html
